--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 </li>
 
 <li>
+  <a href="/frozenflask/catherine/">Catherine</a>
+  
+</li>
+
+<li>
   <a href="/frozenflask/testpage/">Test Page</a>
   
   | Tagged:
