--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 <li>
   <a href="/frozenflask/catherine/">Catherine</a>
   
+  | Tagged:
+  
+  <a href="/frozenflask/tag/beautiful/">beautiful</a>
+  
+  <a href="/frozenflask/tag/awesome/">awesome</a>
+  
+  <a href="/frozenflask/tag/general/">general</a>
+  
+  
 </li>
 
 <li>
