--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,8 @@
   <body>
     <h1><a href="/frozenflask/">My site</a></h1>
     
-<h2>Hello World</h2>
-<p><strong>Hello World</strong>, from a <em>page</em>!</p>
+<h2>About Me</h2>
+<p>I like to code, play games, and drink coffee.</p>
 
   </body>
 </html>
